<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_video">

    <fragment
        android:id="@+id/nav_video"
        android:name="ml.emlyn.torrentx.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ml.emlyn.torrentx.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ml.emlyn.torrentx.ui.books.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

</navigation>