<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/clickBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        android:contentDescription="@string/dl_sec_title"
        app:layout_constraintBottom_toBottomOf="@+id/enSizeTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enNameTv"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <TextView
        android:id="@+id/enNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/clickBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enSizeTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/size_gb"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/enNameTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enNameTv" />
</androidx.constraintlayout.widget.ConstraintLayout>